[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Settings/MaxGameTimeSettings.gd" type="Script" id=1]
[ext_resource path="res://UI/Settings/MaxShotSettings.gd" type="Script" id=2]
[ext_resource path="res://UI/Settings/MaxScoreSettings.gd" type="Script" id=3]
[ext_resource path="res://UI/Settings/Settings.gd" type="Script" id=4]

[node name="Background" type="ColorRect"]
show_behind_parent = true
margin_right = 1600.0
margin_bottom = 3.0
rect_min_size = Vector2( 1600, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.145098, 0.203922, 0.337255, 0.72549 )

[node name="vBoxSettings" type="VBoxContainer" parent="."]
margin_right = 1600.0
margin_bottom = 150.0
rect_min_size = Vector2( 1600, 150 )
mouse_filter = 0
script = ExtResource( 4 )

[node name="hBoxOptions" type="HBoxContainer" parent="vBoxSettings"]
margin_right = 1692.0
margin_bottom = 40.0
mouse_filter = 2

[node name="buttSwitchTargetTimer" type="CheckButton" parent="vBoxSettings/hBoxOptions"]
margin_right = 450.0
margin_bottom = 40.0
pressed = true
text = "SETTINGS_ENABLE_TARGET_TIMER"

[node name="vSeparator" type="VSeparator" parent="vBoxSettings/hBoxOptions"]
margin_left = 454.0
margin_right = 1270.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="buttBackToMenu" type="Button" parent="vBoxSettings/hBoxOptions"]
margin_left = 1274.0
margin_right = 1692.0
margin_bottom = 40.0
text = "SETTINGS_BUTTON_BACK_MAINMENU"

[node name="hBoxConditions" type="HBoxContainer" parent="vBoxSettings"]
margin_top = 44.0
margin_right = 1692.0
margin_bottom = 84.0

[node name="hBoxContainer" type="HBoxContainer" parent="vBoxSettings/hBoxConditions"]
margin_right = 1692.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="label" type="Label" parent="vBoxSettings/hBoxConditions/hBoxContainer"]
margin_top = 7.0
margin_right = 316.0
margin_bottom = 33.0
rect_min_size = Vector2( 120, 0 )
text = "SETTINGS_LABEL_CONDITION"

[node name="vBoxContainerShots" type="VBoxContainer" parent="vBoxSettings/hBoxConditions/hBoxContainer"]
margin_left = 320.0
margin_right = 974.0
margin_bottom = 40.0

[node name="hBoxContainerMaxShots" type="HBoxContainer" parent="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerShots"]
margin_right = 654.0
margin_bottom = 40.0
size_flags_horizontal = 0
custom_constants/separation = 5
script = ExtResource( 2 )

[node name="cButtSwitchMaxShots" type="CheckButton" parent="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerShots/hBoxContainerMaxShots"]
margin_right = 393.0
margin_bottom = 40.0
text = "SETTINGS_LABEL_MAXSHOTS"

[node name="label" type="Label" parent="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerShots/hBoxContainerMaxShots"]
visible = false
margin_left = 398.0
margin_right = 508.0
margin_bottom = 40.0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 5
text = "Max Shots"
valign = 1

[node name="MaxShotSlider" type="HSlider" parent="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerShots/hBoxContainerMaxShots"]
margin_left = 398.0
margin_right = 578.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 180, 40 )
size_flags_horizontal = 8
size_flags_vertical = 5
min_value = -1.0
step = 10.0
value = 50.0
rounded = true
editable = false
tick_count = 10
ticks_on_borders = true

[node name="labelMaxShots" type="Label" parent="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerShots/hBoxContainerMaxShots"]
margin_left = 583.0
margin_top = 7.0
margin_right = 654.0
margin_bottom = 33.0
text = "123456"

[node name="vBoxContainerScore" type="VBoxContainer" parent="vBoxSettings/hBoxConditions/hBoxContainer"]
margin_left = 978.0
margin_right = 1692.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="hBoxContainerMaxScore" type="HBoxContainer" parent="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerScore"]
margin_right = 714.0
margin_bottom = 40.0
custom_constants/separation = 5
script = ExtResource( 3 )

[node name="cButtSwitchMaxScore" type="CheckButton" parent="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerScore/hBoxContainerMaxScore"]
margin_right = 394.0
margin_bottom = 40.0
text = "SETTINGS_LABEL_MAXSCORE"

[node name="label" type="Label" parent="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerScore/hBoxContainerMaxScore"]
visible = false
margin_left = 297.0
margin_right = 611.0
margin_bottom = 40.0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 5
text = "SETTINGS_LABEL_MAXSCORE"
valign = 1

[node name="MaxScoreSlider" type="HSlider" parent="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerScore/hBoxContainerMaxScore"]
margin_left = 399.0
margin_right = 649.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 250, 40 )
size_flags_horizontal = 3
size_flags_vertical = 5
min_value = -1000.0
max_value = 1000.0
step = 100.0
value = 200.0
rounded = true
editable = false
tick_count = 20
ticks_on_borders = true

[node name="labelMaxScore" type="Label" parent="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerScore/hBoxContainerMaxScore"]
margin_left = 654.0
margin_top = 7.0
margin_right = 714.0
margin_bottom = 33.0
rect_min_size = Vector2( 60, 0 )
text = "MAX"

[node name="hBoxRoundTime" type="HBoxContainer" parent="vBoxSettings"]
margin_top = 88.0
margin_right = 1692.0
margin_bottom = 128.0

[node name="hBoxContainer" type="HBoxContainer" parent="vBoxSettings/hBoxRoundTime"]
margin_right = 1692.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="vSeparator" type="VSeparator" parent="vBoxSettings/hBoxRoundTime/hBoxContainer"]
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 0 )

[node name="vBoxContainer" type="VBoxContainer" parent="vBoxSettings/hBoxRoundTime/hBoxContainer"]
margin_left = 124.0
margin_right = 924.0
margin_bottom = 40.0

[node name="hBoxContainerMaxGameTimer" type="HBoxContainer" parent="vBoxSettings/hBoxRoundTime/hBoxContainer/vBoxContainer"]
margin_right = 800.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="cButtSwitchMaxGameTime" type="CheckButton" parent="vBoxSettings/hBoxRoundTime/hBoxContainer/vBoxContainer/hBoxContainerMaxGameTimer"]
margin_right = 430.0
margin_bottom = 40.0
text = "SETTINGS_LABEL_MAXPLAYTIME"

[node name="MaxGameTimeSlider" type="HSlider" parent="vBoxSettings/hBoxRoundTime/hBoxContainer/vBoxContainer/hBoxContainerMaxGameTimer"]
margin_left = 434.0
margin_right = 734.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 300, 40 )
size_flags_horizontal = 8
size_flags_vertical = 5
min_value = -1.0
max_value = 600.0
step = 30.0
value = 60.0
rounded = true
editable = false
tick_count = 10
ticks_on_borders = true

[node name="labelMaxGameTime" type="Label" parent="vBoxSettings/hBoxRoundTime/hBoxContainer/vBoxContainer/hBoxContainerMaxGameTimer"]
margin_left = 738.0
margin_top = 7.0
margin_right = 800.0
margin_bottom = 33.0
text = "00:00"

[connection signal="pressed" from="vBoxSettings/hBoxOptions/buttBackToMenu" to="vBoxSettings" method="_on_buttBackToMenu_pressed"]
[connection signal="pressed" from="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerShots/hBoxContainerMaxShots/cButtSwitchMaxShots" to="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerShots/hBoxContainerMaxShots" method="_on_cButtSwitchMaxShots_pressed"]
[connection signal="toggled" from="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerShots/hBoxContainerMaxShots/cButtSwitchMaxShots" to="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerShots/hBoxContainerMaxShots" method="_on_cButtSwitchMaxShots_toggled"]
[connection signal="value_changed" from="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerShots/hBoxContainerMaxShots/MaxShotSlider" to="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerShots/hBoxContainerMaxShots" method="_on_MaxShotSlider_value_changed"]
[connection signal="pressed" from="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerScore/hBoxContainerMaxScore/cButtSwitchMaxScore" to="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerScore/hBoxContainerMaxScore" method="_on_cButtSwitchMaxScore_pressed"]
[connection signal="toggled" from="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerScore/hBoxContainerMaxScore/cButtSwitchMaxScore" to="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerScore/hBoxContainerMaxScore" method="_on_cButtSwitchMaxScore_toggled"]
[connection signal="value_changed" from="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerScore/hBoxContainerMaxScore/MaxScoreSlider" to="vBoxSettings/hBoxConditions/hBoxContainer/vBoxContainerScore/hBoxContainerMaxScore" method="_on_MaxScoreSlider_value_changed"]
[connection signal="pressed" from="vBoxSettings/hBoxRoundTime/hBoxContainer/vBoxContainer/hBoxContainerMaxGameTimer/cButtSwitchMaxGameTime" to="vBoxSettings/hBoxRoundTime/hBoxContainer/vBoxContainer/hBoxContainerMaxGameTimer" method="_on_cButtSwitchMaxGameTime_pressed"]
[connection signal="toggled" from="vBoxSettings/hBoxRoundTime/hBoxContainer/vBoxContainer/hBoxContainerMaxGameTimer/cButtSwitchMaxGameTime" to="vBoxSettings/hBoxRoundTime/hBoxContainer/vBoxContainer/hBoxContainerMaxGameTimer" method="_on_cButtSwitchMaxGameTime_toggled"]
[connection signal="value_changed" from="vBoxSettings/hBoxRoundTime/hBoxContainer/vBoxContainer/hBoxContainerMaxGameTimer/MaxGameTimeSlider" to="vBoxSettings/hBoxRoundTime/hBoxContainer/vBoxContainer/hBoxContainerMaxGameTimer" method="_on_MaxTimeSlider_value_changed"]
